[gd_scene load_steps=10 format=3 uid="uid://bsghedd31qfoa"]

[ext_resource type="Script" path="res://components/movement_comp/movement_comp.gd" id="1_i5omy"]
[ext_resource type="Script" path="res://components/movement_comp/movement_state_machine.gd" id="2_iych8"]
[ext_resource type="Script" path="res://components/movement_comp/moving_state.gd" id="3_6ky7o"]
[ext_resource type="Script" path="res://components/movement_comp/movement_idle_state.gd" id="4_ntq41"]
[ext_resource type="AudioStream" uid="uid://12xa7dj1stmj" path="res://music/ui_sounds/movement_selcted_beep.wav" id="4_q8hub"]
[ext_resource type="Script" path="res://components/movement_comp/movement_placement_state.gd" id="5_qaa26"]
[ext_resource type="AudioStream" uid="uid://cbphjjiv7krne" path="res://music/error/error.wav" id="8_j1ock"]
[ext_resource type="PackedScene" uid="uid://bxihhqvokjqy" path="res://components/terrain_type_finder/terrain_type_finder.tscn" id="8_nd53a"]
[ext_resource type="AudioStream" uid="uid://c2l0rsn6rxk4t" path="res://music/unit/movement/infantry-march.wav" id="9_h7amt"]

[node name="movement_comp" type="Node2D"]
light_mask = 2
script = ExtResource("1_i5omy")

[node name="State" type="Node" parent="."]
script = ExtResource("2_iych8")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State"]
script = ExtResource("4_ntq41")

[node name="Moving" type="Node" parent="State"]
script = ExtResource("3_6ky7o")

[node name="Placement" type="Node" parent="State"]
script = ExtResource("5_qaa26")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q8hub")

[node name="MovementSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_h7amt")

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_j1ock")

[node name="terrain_type_finder" parent="." instance=ExtResource("8_nd53a")]

[connection signal="hit_river" from="." to="State/Moving" method="_on_movement_comp_hit_river"]
